test/regress/coverage-amount-thousand-apostrophe-err.test
; Coverage for amount.cc
; Incorrect use of thousand-mark apostrophe when the digit grouping
; is not a multiple of 3 (e.g., CHF 1'23.45 has only 2 digits before
; the decimal, not 3).

2024/01/01 Test
    Expenses:Food    CHF 1'23.45
    Assets:Cash

test bal -> 1
__ERROR__
While parsing file "$FILE", line 7:
While parsing posting:
  Expenses:Food    CHF 1'23.45
                   ^^^^^^^^^^^
Error: Incorrect use of thousand-mark apostrophe
end test
